--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,13 +14,23 @@
     "@repo/db": "workspace:*",
     "@repo/emails": "workspace:*",
     "@repo/ui": "workspace:*",
+    "framer-motion": "^11.2.10",
+    "html2canvas": "^1.4.1",
+    "jotai": "^2.8.3",
+    "jotai-devtools": "^0.10.0",
     "lucide-react": "^0.394.0",
+    "moment": "^2.30.1",
     "next": "15.0.0-rc.0",
     "next-auth": "5.0.0-beta.19",
+    "next-safe-action": "^6.2.0",
+    "next-themes": "^0.3.0",
+    "nextjs-toploader": "^1.6.12",
+    "nuqs": "^1.17.4",
     "random-words": "^2.0.1",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
