--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "nuqs": "^1.17.4",
     "random-words": "^2.0.1",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-confetti": "^6.1.0",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
