--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,12 @@
     "@repo/db": "workspace:*",
     "@repo/emails": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@types/lodash": "^4.17.5",
     "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
     "jotai": "^2.8.3",
     "jotai-devtools": "^0.10.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
     "moment": "^2.30.1",
     "next": "15.0.0-rc.0",
@@ -28,8 +30,10 @@
     "nuqs": "^1.17.4",
     "random-words": "^2.0.1",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-calendar-heatmap": "^1.9.0",
     "react-confetti": "^6.1.0",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-tooltip": "^5.26.4",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
   },
@@ -38,11 +42,13 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-calendar-heatmap": "^1.6.7",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
