--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -18,11 +18,13 @@
     "@prisma/client": "^5.15.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "lodash": "^4.17.21",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/lodash": "^4.17.5",
     "prisma": "latest",
     "tsup": "^8.1.0"
   }
