--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@repo/ui": "workspace:*",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/lodash": "^4.17.5",
+    "@types/react-csv": "^1.1.10",
     "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
@@ -25,7 +26,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
     "moment": "^2.30.1",
-    "next": "15.0.0-rc.0",
+    "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
     "next-safe-action": "^6.2.0",
     "next-themes": "^0.3.0",
@@ -33,10 +34,11 @@
     "nuqs": "^1.17.4",
     "optics-ts": "^2.4.1",
     "random-words": "^2.0.1",
-    "react": "19.0.0-rc-f994737d14-20240522",
+    "react": "18.3.1",
     "react-calendar-heatmap": "^1.9.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-csv": "^2.2.2",
+    "react-dom": "18.3.1",
     "react-tooltip": "^5.26.4",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
@@ -50,9 +52,11 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
