--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "jotai-optics": "^0.4.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
+    "mathjs": "^13.0.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
