feat(web): More changes
Adding Pace caret functionality, developing `Sign In ` page, and more

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.2.0",
+    "@hookform/resolvers": "^3.6.0",
+    "@iconscout/react-unicons": "^2.0.2",
     "@prisma/client": "^5.15.0",
     "@repo/db": "workspace:*",
     "@repo/emails": "workspace:*",
@@ -40,6 +42,7 @@
     "react-confetti": "^6.1.0",
     "react-csv": "^2.2.2",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.52.0",
     "react-tooltip": "^5.26.4",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
