feat(web): Chaging turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,7 @@
       "cache": false
     },
     "build": {
-      "dependsOn": ["^build", "^db:generate"],
+      "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env", ".env.*"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
       "cache": false
