--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "lodash": "^4.17.21",
+    "prisma-json-types-generator": "^3.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
