--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,8 @@
     "@types/lodash": "^4.17.5",
     "@types/react-csv": "^1.1.10",
     "@vercel/analytics": "^1.3.1",
+    "ably": "^2.2.0",
+    "bufferutil": "^4.0.8",
     "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
     "jotai": "^2.8.3",
@@ -37,6 +39,7 @@
     "nextjs-toploader": "^1.6.12",
     "nuqs": "^1.17.4",
     "optics-ts": "^2.4.1",
+    "pusher-js": "8.4.0-rc2",
     "random-words": "^2.0.1",
     "react": "18.3.1",
     "react-calendar-heatmap": "^1.9.0",
@@ -47,6 +50,7 @@
     "react-share": "^5.1.0",
     "react-tooltip": "^5.26.4",
     "tailwind-merge": "^2.3.0",
+    "ws": "^8.17.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
