--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "@auth/prisma-adapter": "^2.2.0",
     "@hookform/resolvers": "^3.6.0",
     "@iconscout/react-unicons": "^2.0.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "@next/third-parties": "^14.2.4",
     "@prisma/client": "^5.15.0",
     "@repo/db": "workspace:*",
@@ -27,6 +29,7 @@
     "bufferutil": "^4.0.8",
     "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
+    "input-otp": "^1.2.4",
     "jotai": "^2.8.3",
     "jotai-devtools": "^0.10.0",
     "jotai-optics": "^0.4.0",
@@ -74,6 +77,7 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
+    "@types/bcrypt": "^5.0.2", "@types/bcryptjs": "^2.4.6",
     "url-loader": "^4.1.1"
   }
 }
