--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.394.0",
     "next-themes": "^0.3.0",
     "react-hook-form": "^7.52.0",
