--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,6 @@
     "@auth/prisma-adapter": "^2.2.0",
     "@hookform/resolvers": "^3.6.0",
     "@iconscout/react-unicons": "^2.0.2",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "@next/third-parties": "^14.2.4",
     "@prisma/client": "^5.15.0",
     "@repo/db": "workspace:*",
@@ -26,6 +24,8 @@
     "@types/react-csv": "^1.1.10",
     "@vercel/analytics": "^1.3.1",
     "ably": "^2.2.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bufferutil": "^4.0.8",
     "framer-motion": "^11.2.10",
     "html2canvas": "^1.4.1",
@@ -54,6 +54,7 @@
     "react-hook-form": "^7.52.0",
     "react-share": "^5.1.0",
     "react-tooltip": "^5.26.4",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "ts-pattern": "^5.2.0",
     "ws": "^8.17.1",
@@ -63,6 +64,8 @@
     "@prisma/nextjs-monorepo-workaround-plugin": "^5.16.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-calendar-heatmap": "^1.6.7",
@@ -77,7 +80,6 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "@types/bcrypt": "^5.0.2", "@types/bcryptjs": "^2.4.6",
     "url-loader": "^4.1.1"
   }
 }
