--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "ws": "^8.17.1"
+    "ws": "^8.17.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
