--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -24,11 +24,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": false,
     /* Enable all strict type-checking options. */
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     /* Enable error reporting for expressions and declarations with an implied 'any' type. */
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     /* When type checking, take into account 'null' and 'undefined'. */
-    "strictFunctionTypes": true,
+    "strictFunctionTypes": false,
     /* When assigning functions, check to ensure parameters and the return values are subtype-compatible. */
     "strictBindCallApply": true,
     /* Check that the arguments for 'bind', 'call', and 'apply' methods match the original function. */
@@ -37,11 +37,11 @@
     "noImplicitThis": true,
     /* Enable error reporting when 'this' is given the type 'any'. */
     // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
-    "alwaysStrict": true,
+    "alwaysStrict": false,
     /* Ensure 'use strict' is always emitted. */
     "noUnusedLocals": false,
     /* Enable error reporting when local variables aren't read. */
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     /* Raise an error when a function parameter isn't read. */
     // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
     "noImplicitReturns": true,
