feat(graphql): Adding more operations to the GraphQL server.

--- a/apps/graphql/tsconfig.json
+++ b/apps/graphql/tsconfig.json
@@ -8,6 +8,10 @@
     "strict": true,
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@*": ["./src/*"],
+    }
   }
 }
