--- a/apps/graphql/package.json
+++ b/apps/graphql/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "compile": "tsc",
-    "start": "npx tsx src/index.ts"
+    "start": "npx tsx src/index.ts",
+    "dev": "npx nodemon --watch src -e ts,js -x npm run start"
   },
   "dependencies": {
     "@apollo/server": "^4.10.5",
@@ -16,6 +17,7 @@
     "@types/graphql-fields": "^1.3.9",
     "class-validator": "^0.14.1",
     "core-js": "^3.38.0",
+    "moment": "^2.30.1",
     "graphql": "^16.9.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.23.0",
