--- a/apps/graphql/package.json
+++ b/apps/graphql/package.json
@@ -17,10 +17,13 @@
     "@types/graphql-fields": "^1.3.9",
     "class-validator": "^0.14.1",
     "core-js": "^3.38.0",
-    "moment": "^2.30.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "graphql": "^16.9.0",
     "graphql-fields": "^2.0.3",
+    "graphql-query-complexity": "^1.0.0",
     "graphql-scalars": "^1.23.0",
+    "moment": "^2.30.1",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.3",
     "type-graphql": "2.0.0-rc.2"
@@ -28,6 +31,8 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "typegraphql-prisma": "^0.27.2"
   },
