--- a/apps/graphql/package.json
+++ b/apps/graphql/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.5",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@repo/db": "workspace:*",
     "@repo/emails": "workspace:*",
     "@repo/ui": "workspace:*",
     "@types/graphql-fields": "^1.3.9",
+    "better-sqlite3": "^11.1.2",
     "class-validator": "^0.14.1",
     "core-js": "^3.38.0",
     "cors": "^2.8.5",
@@ -23,6 +26,7 @@
     "graphql-fields": "^2.0.3",
     "graphql-query-complexity": "^1.0.0",
     "graphql-scalars": "^1.23.0",
+    "lucia": "^3.2.0",
     "moment": "^2.30.1",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.3",
@@ -31,8 +35,10 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/better-sqlite3": "^7.6.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/graphql": "^14.5.0",
     "dotenv": "^16.4.5",
     "typegraphql-prisma": "^0.27.2"
   },
