--- a/apps/apollo-next-client/package.json
+++ b/apps/apollo-next-client/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "npx zeus schema.graphql ./__generated__ --typedDocumentNode"
+    "codegen": "npx zeus schema.graphql ./__generated__ --typedDocumentNode",
+    "codegen2": "npx graphql-codegen --config codegen.ts -w"
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
