--- a/apps/graphql/package.json
+++ b/apps/graphql/package.json
@@ -17,6 +17,7 @@
     "@repo/emails": "workspace:*",
     "@repo/ui": "workspace:*",
     "@types/graphql-fields": "^1.3.9",
+    "arctic": "^1.9.2",
     "better-sqlite3": "^11.1.2",
     "class-validator": "^0.14.1",
     "core-js": "^3.38.0",
@@ -28,6 +29,7 @@
     "graphql-scalars": "^1.23.0",
     "lucia": "^3.2.0",
     "moment": "^2.30.1",
+    "oslo": "^1.2.1",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.3",
     "type-graphql": "2.0.0-rc.2"
