--- a/apps/apollo-next-client/package.json
+++ b/apps/apollo-next-client/package.json
@@ -16,6 +16,7 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
+    "lucide-react": "^0.394.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
