--- a/apps/graphql/package.json
+++ b/apps/graphql/package.json
@@ -19,16 +19,21 @@
     "@types/graphql-fields": "^1.3.9",
     "arctic": "^1.9.2",
     "better-sqlite3": "^11.1.2",
+    "busboy": "^1.6.0",
     "class-validator": "^0.14.1",
     "core-js": "^3.38.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "fs-capacitor": "^8.0.0",
     "graphql": "^16.9.0",
     "graphql-fields": "^2.0.3",
     "graphql-query-complexity": "^1.0.0",
     "graphql-scalars": "^1.23.0",
+    "graphql-upload": "^16.0.2",
+    "http-errors": "^2.0.0",
     "lucia": "^3.2.0",
     "moment": "^2.30.1",
+    "object-path": "^0.11.8",
     "oslo": "^1.2.1",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.6.3",
